--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./static/vendor/lodash/lodash.min.js"></script>
     <script src="./static/vendor/d3/d3.min.js"></script>
     <script src="./static/vendor/jquery/jquery.min.js"></script>
+    <script src="./static/vendor/echarts/echarts.min.js"></script>
     <script src="./static/vendor/moment/moment.min.js"></script>
     <script src="./static/vendor/moment/zh-cn.js"></script>
   </body>
